LOADUI-823 Fixed executors that werent working properly anymore